crt: Provide emulation of _time64 function
Function _time64 is available since msvcr70.dll. For older msvcrt versions
provide emulation via WinAPI GetSystemTime() function which is available on
all Windows versions and returns native value in SYSTEMTIME format.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib-common/msvcrt.def.in
+++ b/mingw-w64-crt/lib-common/msvcrt.def.in
@@ -1161,7 +1161,7 @@ _localtime64
 _mktime64
 F_X86_ANY(_osplatform DATA)
 F_NON_I386(_stat64) ; i386 _stat64 replaced by emu
-_time64
+F_NON_I386(_time64) ; i386 _time64 replaced by emu
 _utime64
 _wctime64
 _wfindfirst64
