--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -540,6 +540,7 @@ src_msvcrt32=\
   misc/_free_locale.c \
   misc/_get_current_locale.c \
   misc/_initterm_e.c \
+  misc/_time64.c \
   misc/btowc.c \
   misc/imaxabs.c \
   misc/lc_locale_func.c \
@@ -828,6 +829,7 @@ src_pre_msvcr70=\
   misc/_aligned_offset_malloc.c \
   misc/_aligned_offset_realloc.c \
   misc/_aligned_realloc.c \
+  misc/_time64.c \
   misc/lc_locale_func.c \
   misc/strtoimax.c \
   misc/strtoumax.c \
