winpthreads: move definition of WIN32_LEAN_AND_MEAN from Makefile.am to source files
All #include directives in source files and internal header files
have been grouped in following order:

- CRT header files
- Windows API header files
- winpthreads' public header files
- winpthreads' internal header files

In each group, header files are sorted alphabetically.

Unnecessary includes have been removed from internal header files.

Signed-off-by: Kirill Makurin <maiddaisuki@outlook.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-libraries/winpthreads/Makefile.am
+++ b/mingw-w64-libraries/winpthreads/Makefile.am
@@ -1,7 +1,7 @@
 
 SUBDIRS = . tests
 
-AM_CFLAGS = -Wall -DWIN32_LEAN_AND_MEAN
+AM_CFLAGS = -Wall
 ACLOCAL_AMFLAGS = -I m4
 
 lib_LTLIBRARIES = libwinpthread.la
