--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: mstorsjo/llvm-mingw
-          ref: 20250402
+          ref: 20250430
       - name: Check out the mingw-w64 version to be tested
         uses: actions/checkout@v4
         with:
@@ -36,12 +36,12 @@ jobs:
       - name: Rebuild the runtimes
         run: |
           sudo apt-get update && sudo apt-get install ninja-build
-          DISTRO=ubuntu-20.04-x86_64
+          DISTRO=ubuntu-22.04-x86_64
           src_crt=${{matrix.crt}}
           if [ "$src_crt" = "ucrtbase" ]; then
               src_crt=ucrt
           fi
-          curl -LO https://github.com/mstorsjo/llvm-mingw/releases/download/20250402/llvm-mingw-20250402-$src_crt-$DISTRO.tar.xz
+          curl -LO https://github.com/mstorsjo/llvm-mingw/releases/download/20250430/llvm-mingw-20250430-$src_crt-$DISTRO.tar.xz
           tar -Jxf llvm-mingw-*.tar.xz
           rm llvm-mingw-*.tar.xz
           mkdir install
@@ -49,7 +49,7 @@ jobs:
           ./build-all.sh $(pwd)/install/llvm-mingw --no-tools --wipe-runtimes --with-default-msvcrt=${{matrix.crt}}
           ./test-libcxx-module.sh $(pwd)/install/llvm-mingw
           # Run basic smoke tests on the reassembled toolchain
-          RUN_I686=false RUN_X86_64=false ./run-tests.sh $(pwd)/install/llvm-mingw
+          ./run-tests.sh $(pwd)/install/llvm-mingw
           cd install
           TAG=testing
           NAME=llvm-mingw-$TAG-${{matrix.crt}}-$DISTRO
@@ -73,7 +73,7 @@ jobs:
             if [ "$src_crt" = "ucrtbase" ]; then
                 src_crt=ucrt
             fi
-            curl -LO https://github.com/mstorsjo/llvm-mingw/releases/download/20250402/llvm-mingw-20250402-$src_crt-$arch.zip
+            curl -LO https://github.com/mstorsjo/llvm-mingw/releases/download/20250430/llvm-mingw-20250430-$src_crt-$arch.zip
             unzip -q llvm-mingw-*.zip
             rm llvm-mingw-*.zip
             mv llvm-mingw-* llvm-mingw
@@ -134,7 +134,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: mstorsjo/llvm-mingw
-          ref: 20250402
+          ref: 20250430
       - name: Run tests
         run: |
           ./run-tests.sh /llvm-mingw
@@ -189,7 +189,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: mstorsjo/llvm-mingw
-          ref: 20250402
+          ref: 20250430
       - name: Checkout llvm-project
         run: |
           bash -c "CHECKOUT_ONLY=1 ./build-llvm.sh"
@@ -527,7 +527,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: mstorsjo/llvm-mingw
-          ref: 20250402
+          ref: 20250430
       - name: Run tests
         run: |
           g++ test/hello.c -o hello.exe
