crt: Deinline UCRT _swprintf() and _vswprintf() functions and define import symbols for them
This allows to reference _swprintf() and _vswprintf() functions for UCRT
build via their symbols, like for msvcrt builds.

This change is needed to allow to use __MINGW_ASM_CALL(_swprintf).

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -417,9 +417,11 @@ src_ucrtbase=\
   stdio/ucrt__snprintf.c \
   stdio/ucrt__snscanf.c \
   stdio/ucrt__snwprintf.c \
+  stdio/ucrt__swprintf.c \
   stdio/ucrt__vscprintf.c \
   stdio/ucrt__vsnprintf.c \
   stdio/ucrt__vsnwprintf.c \
+  stdio/ucrt__vswprintf.c \
   stdio/ucrt_fprintf.c \
   stdio/ucrt_fscanf.c \
   stdio/ucrt_fwprintf.c \
