crt: Deinline UCRT _scwprintf() and _vscwprintf() functions and define import symbols for them
This allows to reference _scwprintf() and _vscwprintf() functions for UCRT
build via their symbols, like for msvcrt builds.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -414,11 +414,13 @@ src_ucrtbase=\
   stdio/ucrt___local_stdio_printf_options.c \
   stdio/ucrt___local_stdio_scanf_options.c \
   stdio/ucrt__scprintf.c \
+  stdio/ucrt__scwprintf.c \
   stdio/ucrt__snprintf.c \
   stdio/ucrt__snscanf.c \
   stdio/ucrt__snwprintf.c \
   stdio/ucrt__swprintf.c \
   stdio/ucrt__vscprintf.c \
+  stdio/ucrt__vscwprintf.c \
   stdio/ucrt__vsnprintf.c \
   stdio/ucrt__vsnwprintf.c \
   stdio/ucrt__vswprintf.c \
