crt: Add __mingw_filename_cp()
It returns the code page that the CRT currently uses for filenames.
With UCRT, setlocale(LC_ALL, ".UTF-8") makes the CRT use UTF-8
for filenames, ignoring CP_ACP and CP_OEMCP. Such a setlocale() call
can make the WinAPI filename code page differ from the code page
used by the CRT.

Otherwise the CRT and WinAPI use the same code page which is either
CP_ACP or CP_OEMCP. The latter is used if SetFileApisToOEM has been
called.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -1101,6 +1101,7 @@ src_libmingwex=\
   misc/wmemchr.c         misc/wmemcmp.c             misc/wmemcpy.c          misc/wmemmove.c              misc/wmempcpy.c        \
   misc/wmemset.c         misc/mingw-access.c \
   misc/ftw32.c           misc/ftw32i64.c            misc/ftw64.c            misc/ftw64i32.c \
+  misc/__mingw_filename_cp.c \
   \
   ssp/chk_fail.c         ssp/gets_chk.c             ssp/memcpy_chk.c        ssp/memmove_chk.c \
   ssp/mempcpy_chk.c \
