--- a/mingw-w64-headers/Makefile.in
+++ b/mingw-w64-headers/Makefile.in
@@ -458,6 +458,7 @@ EXTRA_HEADERS = \
 @HAVE_WIDL_TRUE@  include/fusion.idl \
 @HAVE_WIDL_TRUE@  include/fwptypes.idl \
 @HAVE_WIDL_TRUE@  include/hstring.idl \
+@HAVE_WIDL_TRUE@  include/httprequest.idl \
 @HAVE_WIDL_TRUE@  include/icftypes.idl \
 @HAVE_WIDL_TRUE@  include/icodecapi.idl \
 @HAVE_WIDL_TRUE@  include/iketypes.idl \
