winstorecompat: Provide getenv_s() function
Implement getenv_s() via WinAPI GetEnvironmentVariableA() function.

WinAPI function GetEnvironmentVariableA() is available in:
Windows 8 API Sets - https://web.archive.org/web/20131207081913/http://msdn.microsoft.com/en-us/library/windows/desktop/dn505783(v=vs.85).aspx
Windows 8.1 API Sets - https://web.archive.org/web/20161005133126/http://msdn.microsoft.com/library/windows/desktop/dn933214.aspx
Windows 10 UWP - https://learn.microsoft.com/en-us/uwp/win32-and-com/win32-apis

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-libraries/winstorecompat/Makefile.am
+++ b/mingw-w64-libraries/winstorecompat/Makefile.am
@@ -25,6 +25,7 @@ libwinstorecompat_a_SOURCES = \
   src/GetACP.c \
   src/VirtualProtect.c \
   src/getenv.c \
+  src/getenv_s.c \
   src/LocalAlloc.c \
   src/LocalFree.c \
   src/Sleep.c \
