--- a/mingw-w64-libraries/winpthreads/tests/Makefile.in
+++ b/mingw-w64-libraries/winpthreads/tests/Makefile.in
@@ -107,6 +107,7 @@ CONFIG_CLEAN_VPATH_FILES =
 t_clock_getres_SOURCES = t_clock_getres.c
 t_clock_getres_OBJECTS = t_clock_getres.$(OBJEXT)
 t_clock_getres_LDADD = $(LDADD)
+t_clock_getres_DEPENDENCIES = $(top_builddir)/libwinpthread.la
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
 am__v_lt_0 = --silent
@@ -114,15 +115,19 @@ am__v_lt_1 =
 t_clock_gettime_SOURCES = t_clock_gettime.c
 t_clock_gettime_OBJECTS = t_clock_gettime.$(OBJEXT)
 t_clock_gettime_LDADD = $(LDADD)
+t_clock_gettime_DEPENDENCIES = $(top_builddir)/libwinpthread.la
 t_clock_nanosleep_SOURCES = t_clock_nanosleep.c
 t_clock_nanosleep_OBJECTS = t_clock_nanosleep.$(OBJEXT)
 t_clock_nanosleep_LDADD = $(LDADD)
+t_clock_nanosleep_DEPENDENCIES = $(top_builddir)/libwinpthread.la
 t_clock_settime_SOURCES = t_clock_settime.c
 t_clock_settime_OBJECTS = t_clock_settime.$(OBJEXT)
 t_clock_settime_LDADD = $(LDADD)
+t_clock_settime_DEPENDENCIES = $(top_builddir)/libwinpthread.la
 t_nanosleep_SOURCES = t_nanosleep.c
 t_nanosleep_OBJECTS = t_nanosleep.$(OBJEXT)
 t_nanosleep_LDADD = $(LDADD)
+t_nanosleep_DEPENDENCIES = $(top_builddir)/libwinpthread.la
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -523,7 +528,8 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AM_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include
-AM_LDFLAGS = $(am__append_1) -L$(top_builddir) -lwinpthread -static
+AM_LDFLAGS = -L$(top_builddir) $(am__append_1)
+LDADD = $(top_builddir)/libwinpthread.la
 TESTS = $(check_PROGRAMS)
 all: all-am
 
