winpthreads: do not expose IN_WINPTHREAD in public header files
When building winpthreads, define WINPTHREAD_API in config.h
instead of public pthread_compat.h.

Definition of WINPTHREAD_API in pthread_compat.h will only be used
by client code.

Note that IN_WINPTHREAD is still defined.
It is checked for in mingw-w64's time.h.

Signed-off-by: Kirill Makurin <maiddaisuki@outlook.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-libraries/winpthreads/configure.ac
+++ b/mingw-w64-libraries/winpthreads/configure.ac
@@ -54,5 +54,14 @@ LT_LANG([Windows Resource])
 
 # Checks for library functions.
 
+# config.h
+AH_BOTTOM(
+[#ifdef DLL_EXPORT
+#define WINPTHREAD_API __declspec(dllexport)
+#else
+#define WINPTHREAD_API
+#endif]dnl
+)
+
 AC_CONFIG_FILES([Makefile tests/Makefile])
 AC_OUTPUT
