winpthreads: Regenerate configure and Makefile.in
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-libraries/winpthreads/config.h.in
+++ b/mingw-w64-libraries/winpthreads/config.h.in
@@ -61,3 +61,9 @@
 
 /* Version number of package */
 #undef VERSION
+
+#ifdef DLL_EXPORT
+#define WINPTHREAD_API __declspec(dllexport)
+#else
+#define WINPTHREAD_API
+#endif
