crt: Define fseeko and ftello symbols as aliases to fseek and ftell
Both msvcrt and UCRT ABI uses for off_t-based function without any suffix
in their name the 32-bit long off_t type for both 32-bit and 64-bit
architectures.

So define the fseeko symbol as alias to fseek and ftello symbol as alias to
ftell symbol because the fseek and ftell also uses only 32-bit offset type.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/def-include/crt-aliases.def.in
+++ b/mingw-w64-crt/def-include/crt-aliases.def.in
@@ -292,6 +292,8 @@ ADD_DOUBLE_UNDERSCORE(toascii)
 ADD_UNDERSCORE(pclose)
 ADD_UNDERSCORE(popen)
 #endif
+fseeko == fseek
+ftello == ftell
 ; ADD_UNDERSCORE(scalb)
 
 ; This is list of symbol aliases for Large File Specification (extension to Single UNIX Specification)
