crt: Define ftello64 symbol as alias to _ftelli64
mingw-w64 implementation of ftello64() and _ftelli64() functions are same.

So remove the ftello64 implementation and define ftello64 symbol as an
alias to the _ftelli64 symbol.

This change allows to use native msvcr80+ / UCRT implementation of
_ftelli64() function for the POSIX ftello64() instead of statically linking
the mingw-w64 implementation.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/def-include/crt-aliases.def.in
+++ b/mingw-w64-crt/def-include/crt-aliases.def.in
@@ -321,6 +321,7 @@ fstat64 == _fstat64
 #endif
 #ifndef FIXED_SIZE_SYMBOLS
 fseeko64 == _fseeki64
+ftello64 == _ftelli64
 #endif
 
 ; This is list of symbol aliases for GNU functions which are not part of POSIX or ISO C
