crt: Provide _lseeki64() function for pre-msvcrt40 builds
Function _lseeki64() is available since msvcrt40.dll. For older CRT
libraries provides emulation via lseek().

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -832,6 +832,7 @@ src_pre_msvcrt40=\
   misc/dummy__setusermatherr.c \
   stdio/_filelengthi64.c \
   stdio/_fstat32i64.c \
+  stdio/_lseeki64.c \
   stdio/_stat32i64.c \
   stdio/_wstat32i64.c \
   stdio/fgetpos.c \
