crt: Define lseek64 as alias in crt-aliases.def.in
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/def-include/crt-aliases.def.in
+++ b/mingw-w64-crt/def-include/crt-aliases.def.in
@@ -303,6 +303,7 @@ fopen64 == fopen
 ; fgetpos and fsetpos are already 64-bit
 fgetpos64 == fgetpos
 fsetpos64 == fsetpos
+lseek64 == _lseeki64
 #endif
 #ifdef UCRTBASE
 stat32 == _stat32
