--- a/mingw-w64-crt/def-include/crt-aliases.def.in
+++ b/mingw-w64-crt/def-include/crt-aliases.def.in
@@ -298,7 +298,10 @@ ftello == ftell
 
 ; This is list of symbol aliases for Large File Specification (extension to Single UNIX Specification)
 ; https://unix.org/version2/whatsnew/lfs20mar.html#3.1 section 3.1 Transitional Extensions
+open64 == _open
 fopen64 == fopen
+freopen64 == freopen
+tmpfile64 == tmpfile
 #ifndef NO_FPOS64_ALIASES
 ; fgetpos and fsetpos are already 64-bit
 fgetpos64 == fgetpos
